# wagr-microservices

./: .gitignore  LICENSE
.github/workflows/: rust.yml
trade/: Cargo.toml
trade-service/: Dockerfile  go.mod
trade-service/cmd/trade-service/: main.go
trade-service/internal/db/: mongo.go
trade-service/internal/handlers/: order_handler.go  trading_pair_handler.go
trade-service/internal/models/: order.go  trading_pair.go
trade-service/internal/services/: order_service.go  trading_pair_service.go
trade/lib/engine/: Cargo.toml
trade/lib/engine/src/: lib.rs
trade/lib/limit/: Cargo.toml
trade/lib/limit/src/: lib.rs
trade/lib/order/: Cargo.toml
trade/lib/order/src/: lib.rs
trade/lib/orderbook/: Cargo.toml
trade/lib/orderbook/src/: lib.rs
trade/lib/trade_pair/: Cargo.toml
trade/lib/trade_pair/src/: lib.rs
trade/src/: main.rs
trade/src/matching_engine/: engine.rs  mod.rs
trade/src/orderbook/: limit.rs  mod.rs  order.rs  orderbook.rs
trade/trade-service/: Cargo.toml
trade/trade-service/src/: main.rs
