[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
trade_pair = { path = "../trade_pair" }
order = { path = "../order" } 
orderbook = { path = "../orderbook" }