[package]
name = "limit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
serde = "1.0.197"
bson = "1.2.1"
mongodb = "2.8.2"
order = { path = "../order" }