[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
order = { path = "../order" }
trade_pair = { path = "../trade_pair" }
limit = { path = "../limit" }